--- a/Laboratorio 11/package.json
+++ b/Laboratorio 11/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/IvanParedesA/Construccion-de-Software#readme",
   "devDependencies": {
     "nodemon": "^2.0.21"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
