--- a/Laboratorio 12/package.json
+++ b/Laboratorio 12/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "node",
     "tec",
-    "pizza"
+    "pizza",
+    "comida"
   ],
   "author": "Iván Paredes",
   "license": "MIT",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
 }
